--- a/src/components/AddItemForm/style.css
+++ b/src/components/AddItemForm/style.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
 }
-
 .error {
   border: red 1px solid;
 }
@@ -10,14 +9,7 @@
 .error_message {
   color: red;
 }
-
-.active_btn {
-  background-color: aquamarine;
-}
-
-.tasks {
-  padding-inline-start: 1rem;
+.form{
   display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
+  gap: 0.3rem;
 }
