--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0 1rem;
 }
 .toDoLists{
   display: flex;
   gap: 1rem;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
